--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "bufferutil": "^4.0.1",
+    "canvas": "^2.5.0",
     "checksum": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "discord.js": "^11.3.2",
@@ -24,11 +25,13 @@
     "ffmpeg-binaries": "^3.2.2",
     "music-metadata": "^2.4.2",
     "mysql2": "^1.5.3",
-    "node-opus": "^0.3.0",
+    "node-opus": "^0.3.2",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.1.1",
+    "uuid": "^3.3.2",
+    "uws": "^100.0.1",
     "ytdl-core": "^0.20.4"
   }
 }
